styles/homePage.css
html {
 height: 100%;
}

#homePage {
  height: 100%;
  background: none;
  background-image: none;
/*  text-shadow: 0 1px 0 #000;*/
  overflow: visible;
}

/* IE Hack */
@-ms-viewport { width:device-width; zoom:1.0; }

.section {
  position: relative;
  /*border-bottom: 3px solid #eee;*/
  display: inline-block;
  font-weight: 100;
  width:100%;
  min-height: 100%;
  margin: 0;
  padding: 0;
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
}

.section .span_1_of_3, .section .span_1_of_4, .span_1_of_1 h1, .span_1_of_1 h2, .span_1_of_1 h3, .span_1_of_1 h4, .span_1_of_1 h5, .span_1_of_1 h6 {
  text-align: center;
}

.span_1_of_1 h1, .span_1_of_1 h2, .span_1_of_1 h3, .span_1_of_1 h4, .span_1_of_1 h5, .span_1_of_1 h6 {
  text-align: left;
  padding: 30px 0;
}

.span_1_of_1 {
  font-size: 15px;
}

#homePage .section:nth-of-type(1) {
  height:100%;
}

#homePage .section:nth-of-type(even), .section.light {
  background-color: rgba(255, 255, 255, 0.5);
}

.section.dark, .section.dark .section-title {
  background-color: #2e3b4e;
  color: #ffddcc;
}

.section.dark h4, .section.dark a {
  color: #fff;
}

#homePage span.ui-li-count {color: #353535; }

.p div {color: #ddd; }
table.c1 td.b1, table.c1 td.bb1 { padding: 0px; width: 64px; }
.bb1 div {
  font-size: 14px;
}
table.c1 td.b1 { white-space: nowrap; }
table.c1 { margin-top: 20px;}
table.c1 td.b1, .section table.c1 td.bb1 { padding: 0px 15px 0px 15px; }
a h4, h4 {font-size: 22px; line-height: 24px; font-weight:bold;margin-bottom: 3px;margin-top:13px;color: #fff}
 a {/*color: #757575;*/ text-decoration: none;}
h2 {font-size: 28px; line-height: 34px; margin-top: 3px; font-weight:normal;}

.p { padding: 0; margin: 0; }

@media (max-width: 320px) {
  #homePage { max-width: 320px;}
}

@media only screen and (min-width: 321px) and (max-width: 480px) {
 #homePage {max-width: 480px;}
}

.name { top: 0px; left: 0px;  width: 100%; height: 50px;
  background: -webkit-linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.5));
  background: -moz-linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.5));
  background: -ms-linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.5));
  background: -o-linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.5));
  background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.5));
  color: #eee; padding-top:5px;
}

body {
  -webkit-font-smoothing: antialiased;
  margin: 0;
  height:99.9%;
  font-size:12px;
  /*background-color: #fff;*/
/*The Helvetica/Arial-based sans serif stack:
  font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
 */
/*The Verdana-based sans serif stack:
font-family: Corbel, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", "Bitstream Vera Sans", "Liberation Sans", Verdana, "Verdana Ref", sans-serif;
 * */
/*The Trebuchet-based sans serif stack:
 * */
  font-family: "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif;
  color: #757575;
  background-image: url(../images/bg/grey-linen182x182.png);
  background-repeat: repeat;
}

.demo {
  position:absolute;
  top:0;
  left:0;
  right:0;
  min-height: 100%;
}

.demo-1 body:after {
    content: "";
    /*z-index: -1;*/
    position: absolute;
    top: 0; right: 0; bottom: 0; left: 0;
    background: -webkit-linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.95));
    background: -moz-linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.95));
    background: -ms-linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.95));
    background: -o-linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.95));
    background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.95));
}

.vcentered, .vcenteredR, .vcenteredA {
  top: 50%;
  -webkit-transform: translateY(-50%);
     -moz-transform: translateY(-50%);
      -ms-transform: translateY(-50%);
                     translateY(-50%);
}

.vcenteredA {
  position: absolute;
}

.vcenteredR {
  position: relative;
}

.bigCircle {
  background: rgba(1, 5, 54, 0.3);
  position: absolute;
  line-height: 80px;
  border-radius: 80px;
  width: 80px;
  height: 80px;
}
/* ... */

